welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:2: error: not found: value isFacingTail
def hunt() {while (!estSurBiscuit) {if (isFacingTail()) {avance()} else {gauche();if (isFacingTail()) {avance()} else {gauche();gauche();avance()}}}
                                        ^SlugHunting:2: error: not found: value isFacingTail
def hunt() {while (!estSurBiscuit) {if (isFacingTail()) {avance()} else {gauche();if (isFacingTail()) {avance()} else {gauche();gauche();avance()}}}
                                                                                      ^